creation du dashboard, de l'administration avec debug des verifiacation des reservation +  integration front

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -22,3 +22,5 @@ doctrine:
                 MONTH: DoctrineExtensions\Query\Mysql\Month
                 YEAR:  DoctrineExtensions\Query\Mysql\Year
                 DAY:  DoctrineExtensions\Query\Mysql\Day
+                HOUR: DoctrineExtensions\Query\Mysql\Hour
+                MINUTE: DoctrineExtensions\Query\Mysql\Minute
