--- a/composer.json
+++ b/composer.json
@@ -88,6 +88,9 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
+        ],
+        "compile": [
+            "php bin/console doctrine:migration:migrate"
         ]
     },
     "conflict": {
